Replace the Search Community button with a variant that looks the same on all browsers.

--- a/karl/views/static/karl_ie.css
+++ b/karl/views/static/karl_ie.css
@@ -165,8 +165,8 @@ button {
     height: 22px;
 }
 button span {
-    height: 22px !important;
-    line-height: 22px !important;
+    height: 22px;
+    line-height: 22px;
     margin-bottom: -1px;
 }
 .primary_button,
