Various button fixes for IE9:     [X] menubar buttons     [X] tag add button     [X] communities buttons     [X] submit/cancel buttons     [X] login button     [X] calendar add button     [X] Add Blog button

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -2802,8 +2802,10 @@ a.disabled img {
     cursor: pointer;
     padding: 1px 10px;
     margin: 2px;
+/*
     height: 16px;
     line-height: 16px;
+*/
     float: left;
     border-radius: 5px;
     -moz-border-radius: 5px;
