add ui.tabs.js to the jquery-ui bundle, as communities.pt requires it.

--- a/karl/views/static/min/jquery-ui-1.9m3.karl.unthemed.css
+++ b/karl/views/static/min/jquery-ui-1.9m3.karl.unthemed.css
@@ -18,6 +18,6 @@
 /*@ import url("../bottlecap/sl/dev-bundles/jquery-ui-1.9m3/themes/base/jquery.ui.selectable.css");*/
 @import url("../bottlecap/sl/dev-bundles/jquery-ui-1.9m3/themes/base/jquery.ui.slider.css");
 /*@ import url("../bottlecap/sl/dev-bundles/jquery-ui-1.9m3/themes/base/jquery.ui.spinner.css");*/
-/*@ import url("../bottlecap/sl/dev-bundles/jquery-ui-1.9m3/themes/base/jquery.ui.tabs.css");
+@import url("../bottlecap/sl/dev-bundles/jquery-ui-1.9m3/themes/base/jquery.ui.tabs.css");
 /*@ import url("../bottlecap/sl/dev-bundles/jquery-ui-1.9m3/themes/base/jquery.ui.tooltip.css");*/
 
