Make sure that the elements like add tag button do not bleed through the date picker popup on IE. Fixes LP #844285.

--- a/karl/views/forms/templates/formish/widgets/DateTime/widget.html
+++ b/karl/views/forms/templates/formish/widgets/DateTime/widget.html
@@ -4,6 +4,9 @@
       // create the widget
       $('#${field.cssname}')
           .karldatetimepicker({
+              // make sure the date select popup comes over everything
+              // most notably, buttons. A problem on IE7. */
+              zIndex: 20000
           });
   });
 </script>
