Fixed a pile of IE bugs by restoring the doctype declaration.

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -1528,6 +1528,10 @@ span.loginLabelWrapper label {
 input#username {
   width: 370px;
 }
+input#password {
+  width: 200px;
+  margin-right: 8px;
+}
 
 /** =FORUMS
 ----------------------------------------------- */
