Fix DD_roundies regression on IE8 that caused a one pixel difference in the calendar event rendering fixes: LP #873067

--- a/karl/views/static/karl-plugins/karl-js/tests/index.html
+++ b/karl/views/static/karl-plugins/karl-js/tests/index.html
@@ -33,7 +33,7 @@
   <script type="text/javascript" src="../jquery-ui/1.7/ui/ui.dialog.js"></script>
 
   <!-- karl -->
-  <script type="text/javascript" src="../DD_roundies.js"></script>
+  <script type="text/javascript" src="../DD_roundies.src.js"></script>
   <script type="text/javascript" src="../karl.js"></script>
 
 
