Some very tall but thin images break the layout, even with the specific height definition on feeditems. Hiding overflow and setting height in the thumbnail div makes it look right again. We don't do it on the image because aspect ratio would be spoiled.

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -2400,6 +2400,8 @@ ul.menu li {
 
 .feeditem .thumbnail {
     width: 55px;
+    height: 86px;
+    overflow: hidden;
     margin-right: 15px;
 }
 .feeditem .feedoperation {
