--- a/karl/ux2/forms/templates/formish/widgets/Input/widget.html
+++ b/karl/ux2/forms/templates/formish/widgets/Input/widget.html
@@ -1,3 +1,3 @@
 <!-- widgets/Input/widget.html -->
-<input id="${field.cssname}" type="text" name="${field.name}" value="${field.value[0]}" />
+<input id="${field.cssname}" type="text" name="${field.name}" class="input-xlarge" value="${field.value[0]}" />
 
