removed form input classes

--- a/karl/ux2/forms/templates/formish/widgets/SelectChoice/widget.html
+++ b/karl/ux2/forms/templates/formish/widgets/SelectChoice/widget.html
@@ -1,4 +1,4 @@
-<select id="${field.cssname}" name="${field.name}" class="input-xlarge" >
+<select id="${field.cssname}" name="${field.name}">
   <!-- widgets/SelectChoice/widget.html -->
   <option tal:condition="field.widget.none_option"
           value="${field.widget.get_none_option_value(field)}">${field.widget.none_option[1]}</option>
