--- a/karl/ux2/forms/templates/formish/widgets/Password/widget.html
+++ b/karl/ux2/forms/templates/formish/widgets/Password/widget.html
@@ -1,1 +1,1 @@
-<input id="${field.cssname}" type="password" name="${field.name}" class="input-xlarge" value="${field.value[0]}" />
+<input id="${field.cssname}" type="password" name="${field.name}" value="${field.value[0]}" />
