hook pushdown chatter button to chatter url in site

--- a/karl/ux2/microtemplates/radar.mustache
+++ b/karl/ux2/microtemplates/radar.mustache
@@ -73,7 +73,7 @@
                 </div>
             </div>
             {{/items}}
-            <a href="#fullsize-chatter" class="thereIsMore" title="Go to Chatter">
+            <a href="{{chatter_url}}" class="thereIsMore" title="Go to Chatter">
                 {{#has_more_news}}
                     <span class="newMessages">1 more new item</span>
                 {{/has_more_news}}
