--- a/karl/ux2/forms/templates/formish/widgets/KarlTagsAdd/widget.html
+++ b/karl/ux2/forms/templates/formish/widgets/KarlTagsAdd/widget.html
@@ -7,7 +7,8 @@
              $("#${field.cssname}").tagbox({
                 prevals:  {"records": []},
                 validateRegexp: "^[a-zA-Z0-9\-\._]+$",
-                name: "${field.name}"
+                name: "${field.name}",
+                partialForm: true
              });
          });
   </script>
