--- a/karl/ux2/microtemplates/radar.mustache
+++ b/karl/ux2/microtemplates/radar.mustache
@@ -2,9 +2,9 @@
     <div class="pushdownContent clearfix">
         <div id="{{class}}" class="panel">
             <h3>Radar</h3>
-            <ul id="sections" class="nav nav-list">
-                <li class="active"><a href="#">Home <span class="messageCounter">3</span></a></li>
-                <li><a href="#">Timeslice</a></li>
+            <ul id="sections" class="nav nav-list radartabs">
+                <li class="active" data-radartab="home"><a href="#">Home <span class="messageCounter">3</span></a></li>
+                <li data-radartab="other"><a href="#">Other XXX</a></li>
                 <li><a href="#">Topics <span class="messageCounter">4</span></a></li>
                 <li><a href="#">Featured</a></li>
                 <li><a href="#">Apps</a></li>
@@ -12,132 +12,77 @@
             </ul>
         </div>
 
-        {{#streams}}
-        <div id="{{class}}" class="panel">
-            <h3>{{title}}</h3>
+        <div class="radarsection clearfix" data-radarsection="home">
 
-            {{#communities}}
-            <div class="panel-item clearfix {{#new}}newMessage{{/new}}">
-                <div class="panel-item-content">
-                    <div>
-                        <a href="{{url}}" class="fullname">
-                            <strong>
-                                {{title}}
-                            </strong>
+            {{#streams}}
+            <div id="{{class}}" class="panel">
+                <h3>{{title}}</h3>
+
+                {{#communities}}
+                <div class="panel-item clearfix {{#new}}newMessage{{/new}}">
+                    <div class="panel-item-content">
+                        <div>
+                            <a href="{{url}}" class="fullname">
+                                <strong>
+                                    {{title}}
+                                </strong>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                {{/communities}}
+
+                {{#contexts}}
+                <div class="panel-item clearfix {{#new}}newMessage{{/new}}">
+                    <div class="panel-item-content">
+                        <div>
+                            <a href="{{url}}" class="fullname">
+                                <strong>
+                                    {{title}}
+                                </strong>
+                            </a>
+                        </div>
+                        <div>
+                            {{type}}
+                        </div>
+                        <div class="messagetext">
+                            Modified by: {{creator_title}}
+                        </div>
+                        <div class="messagetext">
+                            Date: {{modified}}
+                        </div>
+                    </div>
+                </div>
+                {{/contexts}}
+
+
+                {{#items}}
+                <div class="panel-item clearfix {{#new}}newMessage{{/new}}">
+                    <div class="panel-item-content">
+                        <a href="{{author_profile_url}}">
+                            <img alt="{{author}}" src="{{image_url}}"
+                                 class="avatar" />
+                            <strong class="fullname">{{author}}</strong>
                         </a>
+                        <div>
+                            <a href="{{message_url}}" class="messagetext">
+                                {{text}}
+                            </a>
+                        </div>
+                    </div>
+                    <div class="panel-footer clearfix">
+                        <small class="timestamp">{{info}}</small>
                     </div>
                 </div>
+                {{/items}}
             </div>
-            {{/communities}}
-
-            {{#contexts}}
-            <div class="panel-item clearfix {{#new}}newMessage{{/new}}">
-                <div class="panel-item-content">
-                    <div>
-                        <a href="{{url}}" class="fullname">
-                            <strong>
-                                {{title}}
-                            </strong>
-                        </a>
-                    </div>
-                    <div>
-                        {{type}}
-                    </div>
-                    <div class="messagetext">
-                        Modified by: {{creator_title}}
-                    </div>
-                    <div class="messagetext">
-                        Date: {{modified}}
-                    </div>
-                </div>
-            </div>
-            {{/contexts}}
-
-
-            {{#items}}
-            <div class="panel-item clearfix {{#new}}newMessage{{/new}}">
-                <div class="panel-item-content">
-                    <a href="{{author_profile_url}}">
-                        <img alt="{{author}}" src="{{image_url}}"
-                             class="avatar" />
-                        <strong class="fullname">{{author}}</strong>
-                    </a>
-                    <div>
-                        <a href="{{message_url}}" class="messagetext">
-                            {{text}}
-                        </a>
-                    </div>
-                </div>
-                <div class="panel-footer clearfix">
-                    <small class="timestamp">{{info}}</small>
-                </div>
-            </div>
-            {{/items}}
-        </div>
-        {{/streams}}
-
-        <div class="panel" style="display: none">
-            <h2>Vote for the Office Christmas Menu</h2>
-            <form href="#">
-                <div class="clearfix">
-                    <label id="options">What would you like for the main course ?</label>
-                    <div class="input">
-                        <ul class="inputs-list">
-                            <li>
-                                <label>
-                                    <input type="checkbox" name="options" value="option1">
-                                    <span>Turducken</span>
-                                </label>
-                            </li>
-                            <li>
-                                <label>
-                                    <input type="checkbox" name="options" value="option2">
-                                    <span>Free-range chicken</span>
-                                </label>
-                            </li>
-                            <li>
-                                <label>
-                                    <input type="checkbox" name="options" value="option3">
-                                    <span>A partridge, served in a tree of pears</span>
-                                </label>
-                            </li>
-
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="clearfix">
-                    <label id="options">How about desert ?</label>
-                    <div class="input">
-                        <ul class="inputs-list">
-                            <li>
-                                <label>
-                                    <input type="checkbox" name="options" value="option1">
-                                    <span>Turducken</span>
-                                </label>
-                            </li>
-                            <li>
-                                <label>
-                                    <input type="checkbox" name="options" value="option2">
-                                    <span>Free-range chicken</span>
-                                </label>
-                            </li>
-                            <li>
-                                <label>
-                                    <input type="checkbox" name="options" value="option3">
-                                    <span>A partridge, served in a tree of pears</span>
-                                </label>
-                            </li>
-
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="actions">
-                    <input type="submit" value="Vote" class="btn primary" style="margin-left: 40px;">
-                </div>
-            </form>
+            {{/streams}}
 
         </div>
+
+        <div class="radarsection clearfix" data-radarsection="other">
+            Lorem ipsum!
+        </div>
+
     </div>
 </div>
