Radar pushdown, Budget tab: show something already from google with dummy data

--- a/karl/ux2/microtemplates/radar.mustache
+++ b/karl/ux2/microtemplates/radar.mustache
@@ -82,8 +82,14 @@
 
 
         <div class="radarsection clearfix" data-radarsection="budget">
-             Lorem Ipsum
-            <div id="chart1"></div>
+            <div class="panel">
+                Lorem Ipsum
+                <div class="radarchart"></div>
+            </div>
+            <div class="panel">
+                Dolor Sit Amet
+                <div class="radarchart"></div>
+            </div>
         </div>
 
 
