Radar pushdown: Wire up chart data to the server

--- a/karl/ux2/microtemplates/radar.mustache
+++ b/karl/ux2/microtemplates/radar.mustache
@@ -83,12 +83,10 @@
 
         <div class="radarsection clearfix" data-radarsection="budget">
             <div class="panel">
-                Lorem Ipsum
-                <div class="radarchart"></div>
+                <div class="radarchart" data-chartname="chart1"></div>
             </div>
             <div class="panel">
-                Dolor Sit Amet
-                <div class="radarchart"></div>
+                <div class="radarchart" data-chartname="chart2"></div>
             </div>
         </div>
 
