--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -1716,21 +1716,21 @@ ul.tagUsersList li {
 .profile_page_body div p a:visited {
 	color: #639332;
 }
-.portraid {
+.portrait {
     float: left;
     margin: 0 8px 8px 0;
 }
-.blogComment .portraid {
+.blogComment .portrait {
     float: right;
     clear: both;
     margin: 20px 0 8px 20px;
 }
-.portraid img {
+.portrait img {
   display: block;
   width: 75px;
   margin-right: 30px;
 }
-.profile_page_body .portraid img {
+.profile_page_body .portrait img {
     margin-right: 0;
 }
 .profileDetails {
