fixed radar left menu style

--- a/karl/ux2/microtemplates/radar.mustache
+++ b/karl/ux2/microtemplates/radar.mustache
@@ -1,9 +1,8 @@
 <div id="radar-panel">
     <div class="pushdownContent clearfix">
         <div id="{{class}}" class="panel">
-            <h3>Radar</h3>
-            <ul id="sections" class="nav nav-list radartabs">
-                <li class="active" data-radartab="home"><a href="#">Home <span class="messageCounter">3</span></a></li>
+            <ul id="sections" class="radartabs pushDownList pushDownNavigation">
+                <li class="selected" data-radartab="home"><a href="#">Home <span class="messageCounter">3</span></a></li>
                 <li data-radartab="budget"><a href="#">Budget <span class="messageCounter">4</span></a></li>
                 <li data-radartab="approvals"><a href="#">Approvals</a></li>
                 <li><a href="#">Featured</a></li>
