reformatted ux2 main.less

--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -5,13 +5,14 @@ a#global-logo {
     padding-left: 35px;
 }
 
-.pushdownContent .avatar {
+.pushdownContent {
+    .avatar {
         width: 48px;
         height: auto;
-} 
-
-.pushdownContent .panel-item {
+    }
+    .panel-item {
         overflow: hidden;
+    }
 } 
 
 .kscreentitle {
@@ -22,14 +23,14 @@ a#global-logo {
         width: 99%;
 }
 
-.contentWrapper section.main {
+.contentWrapper {
+    section.main {
         padding-top: 0;
+        form.addTag {
+            width: 20em;
+        }
+    }
 } 
-
-
-section.main form.addTag {
-    width: 20em;
-}
 
 #chatter-panel-text {
     width: 95%;
